--- a/.semaphore/semaphore.yml
+++ b/.semaphore/semaphore.yml
@@ -28,15 +28,15 @@ blocks:
       prologue:
         commands:
           - checkout
-          - cache restore "npm-$(checksum frontend/package.json)"
-          - cache restore "node-modules-$(checksum frontend/package.json)"
+          - cache restore "npm-$(checksum package.json)"
+          - cache restore "node-modules-$(checksum package.json)"
           - cache restore "images-${SEMAPHORE_PROJECT_ID}"
           - cache restore "$SEMAPHORE_PROJECT_ID-$SEMAPHORE_GIT_BRANCH"
       epilogue:
         commands:
-          - cache store "npm-$(checksum frontend/package.json)" "$HOME/.npm"
-          - cache store "node-modules-$(checksum frontend/package.json)"
-            "frontend/node_modules"
+          - cache store "npm-$(checksum package.json)" "$HOME/.npm"
+          - cache store "node-modules-$(checksum package.json)"
+            "node_modules"
           - cache store "images-${SEMAPHORE_PROJECT_ID}" "ci/images"
           - cache store "$SEMAPHORE_PROJECT_ID-$SEMAPHORE_GIT_BRANCH"
             "$HOME/.cache"
