--- a/package.json
+++ b/package.json
@@ -39,8 +39,8 @@
     "url": "https://github.com/akvo/akvo-react-form-editor/issues"
   },
   "scripts": {
-    "build": "microbundle-crl --no-compress --format modern,cjs",
-    "start": "microbundle-crl watch --no-compress --format modern,cjs",
+    "build": "microbundle-crl --no-compress --format modern,cjs --css-modules 'arfe-[local]'",
+    "start": "microbundle-crl watch --no-compress --format modern,cjs --css-modules 'arfe-[local]'",
     "prepare": "run-s build",
     "test": "run-s test:unit test:lint test:build",
     "test:build": "run-s build",
