--- a/package.json
+++ b/package.json
@@ -85,6 +85,7 @@
   ],
   "dependencies": {
     "antd": "^4.20.0",
-    "lodash": "^4.17.21"
+    "lodash": "^4.17.21",
+    "pullstate": "^1.24.0"
   }
 }
