--- a/package.json
+++ b/package.json
@@ -86,6 +86,7 @@
   "dependencies": {
     "antd": "^4.20.0",
     "lodash": "^4.17.21",
-    "pullstate": "^1.24.0"
+    "pullstate": "^1.24.0",
+    "react-icons": "^4.4.0"
   }
 }
