[#7] onSave and json preview

--- a/example/package.json
+++ b/example/package.json
@@ -13,7 +13,8 @@
     "akvo-react-form-editor": "link:..",
     "react": "link:../node_modules/react",
     "react-dom": "link:../node_modules/react-dom",
-    "react-scripts": "link:../node_modules/react-scripts"
+    "react-scripts": "link:../node_modules/react-scripts",
+    "react-json-view": "^1.21.3"
   },
   "devDependencies": {
     "@babel/plugin-syntax-object-rest-spread": "^7.8.3"
