--- a/package.json
+++ b/package.json
@@ -45,7 +45,7 @@
     "test": "run-s test:unit test:lint test:build",
     "test:build": "run-s build",
     "test:prettier": "prettier --check src",
-    "test:lint": "eslint .",
+    "test:lint": "eslint --config .eslintrc.json ./src/ --ext .js,.jsx",
     "test:unit": "cross-env CI=1 react-scripts test --env=jsdom",
     "test:watch": "react-scripts test --env=jsdom",
     "predeploy": "cd example && yarn install && yarn run build",
