--- a/package.json
+++ b/package.json
@@ -72,6 +72,7 @@
     "eslint-plugin-node": "^11.0.0",
     "eslint-plugin-prettier": "^4.2.1",
     "gh-pages": "^4.0.0",
+    "jest-canvas-mock": "^2.4.0",
     "microbundle-crl": "^0.13.11",
     "npm-run-all": "^4.1.5",
     "prettier": "^2.7.1",
