--- a/package.json
+++ b/package.json
@@ -91,6 +91,7 @@
   "dependencies": {
     "akvo-react-form": "^2.0.0",
     "antd": "^4.20.0",
+    "locale-codes": "^1.3.1",
     "lodash": "^4.17.21",
     "pullstate": "^1.24.0",
     "react-icons": "^4.4.0"
