--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "akvo-react-form-editor",
-  "version": "1.0.0",
+  "version": "1.0.1-0",
   "description": "survey editor for akvo-react-form",
   "author": "akvo",
   "license": "AGPL-3.0",
