--- a/package.json
+++ b/package.json
@@ -46,7 +46,7 @@
     "test:build": "run-s build",
     "test:prettier": "prettier --check src",
     "test:lint": "eslint --config .eslintrc.json ./src/ --ext .js,.jsx",
-    "test:unit": "cross-env CI=1 react-scripts test --env=jsdom",
+    "test:unit": "cross-env CI=1 react-scripts test --env=jsdom --transformIgnorePatterns \"node_modules/(?!react-leaflet)/\"",
     "test:watch": "react-scripts test --env=jsdom",
     "predeploy": "cd example && yarn install && yarn run build",
     "deploy": "gh-pages -d example/build"
