--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "akvo-react-form-editor",
-  "version": "1.0.7",
-  "description": "survey editor for akvo-react-form",
+  "version": "1.0.8",
+  "description": "Survey editor for akvo-react-form",
   "author": "akvo",
   "license": "AGPL-3.0",
   "repository": "akvo/akvo-react-form-editor",
