--- a/package.json
+++ b/package.json
@@ -96,6 +96,7 @@
     "locale-codes": "^1.3.1",
     "lodash": "^4.17.21",
     "pullstate": "^1.24.0",
+    "react-color": "^2.19.3",
     "react-icons": "^4.4.0"
   },
   "files": [
