--- a/package.json
+++ b/package.json
@@ -91,7 +91,7 @@
     "react-test-renderer": "^18.2.0"
   },
   "dependencies": {
-    "akvo-react-form": "^2.2.5",
+    "akvo-react-form": "^2.2.7",
     "antd": "^4.20.0",
     "locale-codes": "^1.3.1",
     "lodash": "^4.17.21",
@@ -99,7 +99,5 @@
     "react-color": "^2.19.3",
     "react-icons": "^4.4.0"
   },
-  "files": [
-    "dist"
-  ]
+  "files": ["dist"]
 }
